--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./src/bin/www",
-    "dev": "NODE_ENV=development nodemon ./src/bin/www",
+    "start": "NODE_ENV=production node ./src/bin/www.js",
+    "dev": "NODE_ENV=development nodemon ./src/bin/www.js",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "closest-match": "^1.3.3",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
     "helmet": "^3.23.3",
     "http-errors": "^1.8.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.2.10",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -34,5 +40,6 @@
     "ignore": [
       "*.test.js"
     ]
-  }
+  },
+  "type": "module"
 }
