--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@babel/preset-env": "^7.19.1",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "closest-match": "^1.3.3",
@@ -24,6 +25,7 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "babel-jest": "^29.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "^6.15.0",
@@ -34,7 +36,9 @@
     "supertest": "^3.4.2"
   },
   "jest": {
-    "testEnvironment": "node"
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    } 
   },
   "nodemonConfig": {
     "ignore": [
